--- a/views/vasos/_form.ejs
+++ b/views/vasos/_form.ejs
@@ -72,6 +72,17 @@
         </div>
     </div>
 
+    <div class="form-group">
+        <label for="ensayar" class="col-md-7 control-label">Ensayar ph:</label>
+        <div class="col-md-5">
+            <% if (vaso.ph_ensayar) { %>
+                <input type="checkbox" class="form-control" checked id="ph_ensayar" name="vaso[ph_ensayar]" value="<%= vaso.ph_ensayar %>" />
+            <%} else { %>
+                <input type="checkbox" class="form-control" id="ph_ensayar" name="vaso[ph_ensayar]" value="<%= vaso.ph_ensayar %>" />
+            <%}%>
+        </div>
+    </div>
+
     <div class="col-md-6">
         <div class="form-group">
             <label for="redox_max" class="col-md-7 control-label">Redox Máximo:</label>
