--- a/views/vasos/_form.ejs
+++ b/views/vasos/_form.ejs
@@ -133,9 +133,9 @@
     		<label for="transparencia" class="col-md-7 control-label">Transparencia:</label>
     		<div class="col-sm-5">
     			<select class="form-control" id="transparencia" name="vaso[transparencia]">
-    				<option value='cumple' <%if (vaso.transparencia==='cumple') {%> selected <%}%>>Cumple</option>
-    				<option value='no cumple' <%if (vaso.transparencia==='no cumple') {%> selected <%}%>>No cumple</option>
-    				<option value='no ensaya' <%if (vaso.transparencia==='no ensaya') {%> selected <%}%>>No ensaya</option>
+    				<option value='cumple' <%if (vaso.transparencia==='cumple') {%> selected <%}%>>✔️ Cumple</option>
+    				<option value='no cumple' <%if (vaso.transparencia==='no cumple') {%> selected <%}%>>❌ No cumple</option>
+    				<option value='no ensaya' <%if (vaso.transparencia==='no ensaya') {%> selected <%}%>>🔒 No ensaya</option>
     			</select>
     		</div>
     	</div>
@@ -146,9 +146,9 @@
     		<label for="extranios" class="col-md-7 control-label">Cuerpos Extraños:</label>
     		<div class="col-sm-5">
     			<select class="form-control" id="extranios" name="vaso[extranios]">
-    				<option value='cumple' <%if (vaso.extranios==='cumple') {%> selected <%}%>>Cumple</option>
-    				<option value='no cumple' <%if (vaso.extranios==='no cumple') {%> selected <%}%>>No cumple</option>
-                    <option value='no ensaya' <%if (vaso.extranios==='no ensaya') {%> selected <%}%>>No ensaya</option>
+    				<option value='cumple' <%if (vaso.extranios==='cumple') {%> selected <%}%>>✔️ Cumple</option>
+    				<option value='no cumple' <%if (vaso.extranios==='no cumple') {%> selected <%}%>>❌ No cumple</option>
+                    <option value='no ensaya' <%if (vaso.extranios==='no ensaya') {%> selected <%}%>>🔒 No ensaya</option>
     			</select>
     		</div>
     	</div>
@@ -269,9 +269,9 @@
     		<label for="ecoli" class="col-md-7 control-label">Écoli:</label>
     		<div class="col-sm-5">
     			<select class="form-control" id="ecoli" name="vaso[ecoli]">
-    				<option value='cumple' <%if (vaso.ecoli==='cumple') {%> selected <%}%>>Cumple</option>
-    				<option value='no cumple' <%if (vaso.ecoli==='no cumple') {%> selected <%}%>>No cumple</option>
-                    <option value='no ensaya' <%if (vaso.ecoli==='no ensaya') {%> selected <%}%>>No ensaya</option>
+    				<option value='cumple' <%if (vaso.ecoli==='cumple') {%> selected <%}%>>✔️ Cumple</option>
+    				<option value='no cumple' <%if (vaso.ecoli==='no cumple') {%> selected <%}%>>❌ No cumple</option>
+                    <option value='no ensaya' <%if (vaso.ecoli==='no ensaya') {%> selected <%}%>>🔒 No ensaya</option>
     			</select>
     		</div>
     	</div>
@@ -282,9 +282,9 @@
     		<label for="pseudomona" class="col-md-7 control-label">Pseudomona:</label>
     		<div class="col-sm-5">
     			<select class="form-control" id="pseudomona" name="vaso[pseudomona]">
-    				<option value='cumple' <%if (vaso.pseudomona==='cumple') {%> selected <%}%>>Cumple</option>
-    				<option value='no cumple' <%if (vaso.pseudomona==='no cumple') {%> selected <%}%>>No cumple</option>
-                    <option value='no ensaya' <%if (vaso.pseudomona==='no ensaya') {%> selected <%}%>>No ensaya</option>
+    				<option value='cumple' <%if (vaso.pseudomona==='cumple') {%> selected <%}%>>✔️ Cumple</option>
+    				<option value='no cumple' <%if (vaso.pseudomona==='no cumple') {%> selected <%}%>>❌ No cumple</option>
+                    <option value='no ensaya' <%if (vaso.pseudomona==='no ensaya') {%> selected <%}%>>🔒 No ensaya</option>
     			</select>
     		</div>
     	</div>
@@ -295,9 +295,9 @@
     		<label for="enterococos" class="col-md-7 control-label">Enterococos:</label>
     		<div class="col-sm-5">
     			<select class="form-control" id="enterococos" name="vaso[enterococos]">
-    				<option value='cumple' <%if (vaso.enterococos==='cumple') {%> selected <%}%>>Cumple</option>
-    				<option value='no cumple' <%if (vaso.enterococos==='no cumple') {%> selected <%}%>>No cumple</option>
-                    <option value='no ensaya' <%if (vaso.enterococos==='no ensaya') {%> selected <%}%>>No ensaya</option>
+    				<option value='cumple' <%if (vaso.enterococos==='cumple') {%> selected <%}%>>✔️ Cumple</option>
+    				<option value='no cumple' <%if (vaso.enterococos==='no cumple') {%> selected <%}%>>❌ No cumple</option>
+                    <option value='no ensaya' <%if (vaso.enterococos==='no ensaya') {%> selected <%}%>>🔒 No ensaya</option>
     			</select>
     		</div>
     	</div>
@@ -308,9 +308,9 @@
     		<label for="staphlylococcus" class="col-md-7 control-label">Staphlylococcus:</label>
     		<div class="col-sm-5">
     			<select class="form-control" id="staphlylococcus" name="vaso[staphlylococcus]">
-    				<option value='cumple' <%if (vaso.staphlylococcus==='cumple') {%> selected <%}%>>Cumple</option>
-    				<option value='no cumple' <%if (vaso.staphlylococcus==='no cumple') {%> selected <%}%>>No cumple</option>
-                    <option value='no ensaya' <%if (vaso.staphlylococcus==='no ensaya') {%> selected <%}%>>No ensaya</option>
+    				<option value='cumple' <%if (vaso.staphlylococcus==='cumple') {%> selected <%}%>>✔️ Cumple</option>
+    				<option value='no cumple' <%if (vaso.staphlylococcus==='no cumple') {%> selected <%}%>>❌ No cumple</option>
+                    <option value='no ensaya' <%if (vaso.staphlylococcus==='no ensaya') {%> selected <%}%>>🔒 No ensaya</option>
     			</select>
     		</div>
     	</div>
