--- a/public/stylesheets/movil.css
+++ b/public/stylesheets/movil.css
@@ -72,7 +72,9 @@
 
     #menu-inicio {
 
+        position: fixed;
 		font-size: 4vw;
+
 
 	}
 
@@ -266,8 +268,12 @@
 
 	}
 
-    .marco_item_ensayo {
+    .marco_grupo {
+		padding: 2px;
+	}
 
+    .marco {
+        padding: 5px;
         color: white;
 		background-color: #3d4045;
     }
