--- a/views/siloes/show.ejs
+++ b/views/siloes/show.ejs
@@ -34,7 +34,7 @@
 											    		<div class="card-header" role="tab" id="headingOne">
 											      			<h5 class="mb-0">
 											        			<a class="collapsed" data-toggle="collapse" href="#<%= ensayos[index].id + 10 %>" aria-expanded="true" aria-controls="<%= ensayos[index].id + 10 %>">
-											          				Bacteriológicos: E. Coli, Psudomoma, Enterococos, Staphlylococos ...
+											          				<strong>Bacteriológicos:</strong> E. Coli, Psudomoma, Enterococos, Staphlylococos ...
 											        			</a>
 											      			</h5>
 											    		</div>
@@ -174,7 +174,7 @@
 												    	<div class="card-header" role="tab" id="headingTwo">
 												      		<h5 class="mb-0">
 												        		<a class="collapsed" data-toggle="collapse" href="#<%= ensayos[index].id + 100 %>" aria-expanded="false" aria-controls="<%= ensayos[index].id + 100 %>">
-												          			Físicos: Ph, Temperatura, Turbidez, Recirculación, Redox ...
+												          			<strong>Físicos:</strong> Ph, Temperatura, Turbidez, Recirculación, Redox ...
 												        		</a>
 												      		</h5>
 												    	</div>
@@ -335,7 +335,7 @@
 													   	<div class="card-header" role="tab" id="headingThree">
 													    	<h5 class="mb-0">
 													        	<a class="collapsed" data-toggle="collapse" href="#<%= ensayos[index].id + 1000 %>" aria-expanded="false" aria-controls="<%= ensayos[index].id + 1000 %>">
-													          		Químicos: Cloro, Cloro combinado, Bromo, Isocianuro ...
+													          		<strong>Químicos:</strong> Cloro, Cloro combinado, Bromo, Isocianuro ...
 													        	</a>
 													      	</h5>
 													    </div>
@@ -465,7 +465,7 @@
 													   	<div class="card-header" role="tab" id="headingFour">
 													    	<h5 class="mb-0">
 													        	<a class="collapsed" data-toggle="collapse" href="#<%= ensayos[index].id + 10000 %>" aria-expanded="false" aria-controls="<%= ensayos[index].id + 10000 %>">
-													          		Interior: Humedad, Co2, Legionella, Langelier ...
+													          		<strong>Interior:</strong> Humedad, Co2, Legionella, Langelier ...
 													        	</a>
 													      	</h5>
 													    </div>
