--- a/public/stylesheets/movil.css
+++ b/public/stylesheets/movil.css
@@ -78,6 +78,15 @@
 
 	}
 
+    .marco_grupo {
+		padding: 2px;
+	}
+
+    .marco {
+        padding: 5px;
+        color: white;
+		background-color: #3d4045;
+    }
 
 
 
